@@ -3,16 +3,19 @@ Hash: SHA1
 
 DIST kernel-eeepc-2.6.31.1.x86.tbz2 5240071 RMD160 f112226026a33a281649cebb9c1c6470e5de52b0 SHA1 5bb9f4cb2f9c132b7472c7fc67d8bcdb0784b44f SHA256 67ff94f9c22964943ac5af4e40c04e592286dda52337ca1dae35ef432e799a63
 DIST kernel-eeepc-2.6.31.x86.tbz2 5239727 RMD160 7c13544216e04f1065046c00c7adfc8cd0ae8b3c SHA1 c87cad0d2952d94b7d27350bc365d848305a1227 SHA256 a5398cfcba46669c9fd15e12b0ba27097a106d90dcfc3ba14ef1819fe74948f5
+DIST kernel-eeepc-2.6.32.1.x86.tbz2 5455748 RMD160 038531310e086dc51f20f93b0614905841645615 SHA1 0613dc3ec13dd55ecc7e50b152e66590195a7dbf SHA256 8d021a2cadf4ea6dddbd8bdd61e5925dbc9ad6eea20280c03b12432241897c08
 DIST modules-eeepc-2.6.31.1.x86.tbz2 1667897 RMD160 341ed36f4f4d7557630bd7a7a917d8f587123506 SHA1 1619808e49fc756f2ed816a6cef70058784f3bbd SHA256 4c4f8635425e020e4bda99ce131a4c30f4ce0b4c1efd296e090a72a830746f1f
 DIST modules-eeepc-2.6.31.x86.tbz2 1679812 RMD160 18a652007ef2317b02f2e8f47cc1ab911e23fbb4 SHA1 f762816e3f81b218a777ce42dc2e815a7919f244 SHA256 0edb02e4eb70eb2bdc5144142ca26733fce9fcc571245ad9fad83ebb0e0ea6dc
+DIST modules-eeepc-2.6.32.1.x86.tbz2 1698878 RMD160 23a81816a6dd2c8f4c3988018dff2f1510d636a9 SHA1 95bbca944c98905703cb3d009958f3e5bdb52f77 SHA256 8c667a4187dc707cc81416f83d65a38817ddce83c665187f31fe582d75dd8f56
 EBUILD kernel-eeepc-2.6.31.1.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
 EBUILD kernel-eeepc-2.6.31.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-MISC ChangeLog 653 RMD160 565fa5f6fddbf493c2cf97c6b122adcff848db68 SHA1 746994a7311feb1e847542988c20dbba52ff7a8d SHA256 5f981592564909820fc5fbba3bc48c8b5bc1312a4a60ec6dbce921815920be4e
+EBUILD kernel-eeepc-2.6.32.1.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
+MISC ChangeLog 793 RMD160 260388a539941a8d8dd88bf741e6fc3078f8fb1b SHA1 9559525f5adec6fa1a83984bf1cd72e711f72c86 SHA256 8da7ba8161edeec2f5edf64ef25386ce058bffe88006bbd89d54547c4fa2a26a
 MISC metadata.xml 301 RMD160 759f51dcb64d85eee294cf160d7eedff66f3c6f6 SHA1 36446536d5452b1771f375c9d6fbf867bb705587 SHA256 a1d5a7bd389d314377303e077893dcae8ed0c8bd5bf4389c384d751704c27b2d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKxmnIQW+hXSf0t0IRAkh/AKC8FBBUU1Xm+QiK9irAcYG6JkPUagCeJWaH
-mtywUsjtsqukglv0dB83y68=
-=7a5L
+iD8DBQFLKHvsQW+hXSf0t0IRAlM/AKDSbgr3T8MSCaMvonDSG7yWxw+YIACgsTA4
+YCk5psgu4BKHmO6o6PRlGOU=
+=HRmt
 -----END PGP SIGNATURE-----
