@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kernel-eeepc-2.6.32.1 (16 Dec 2009)
+
+  16 Dec 2009; Lance Albertson <ramereth@gentoo.org>
+  +kernel-eeepc-2.6.32.1.ebuild:
+  version bump
+
 *kernel-eeepc-2.6.31.1 (02 Oct 2009)
 
   02 Oct 2009; Lance Albertson <ramereth@gentoo.org>
